--- a/web_event/events/templates/events/navbar.html
+++ b/web_event/events/templates/events/navbar.html
@@ -10,7 +10,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'home' '2025' 'April' %}">April</a>
           </li>
-         
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'list_events' %}">Events</a> <!-- url name .. list-events-->
+          </li>
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
