--- a/web_event/events/templates/events/navbar.html
+++ b/web_event/events/templates/events/navbar.html
@@ -11,7 +11,10 @@
             <a class="nav-link" href="{% url 'home' '2025' 'April' %}">April</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'list_events' %}">Events</a> <!-- url name .. list-events-->
+            <a class="nav-link" href="{% url 'list-events' %}">Events</a> <!-- url name .. list-events-->
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'add-venue' %}">Add Venue</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
