--- a/web_event/events/templates/events/event_list.html
+++ b/web_event/events/templates/events/event_list.html
@@ -12,15 +12,15 @@
 {% for event in event_list %}
 <div class="card">
     <div class="card-header">
-        {{ event }}
+        <h1>{{ event }}</h1>
     </div>
     <div class="card-body">
       <h5 class="card-title">Venue: {{ event.venue }}</h5>
       <p class="card-text">
-        <strong>Date:</strong> {{ event.event_date }}<br>
-        <strong>Venue Website:</strong> {{ event.venue.web }}<br>
-       <strong>Manager:</strong>  {{ event.manager }}<br>
-        <strong>Decription:</strong> {{ event.description }}<br>
+        Date: {{ event.event_date }}<br>
+        Venue Website: {{ event.venue.web }}<br>
+        Manager: {{ event.manager }}<br>
+        Decription: {{ event.description }}<br>
         <strong>Attendees:</strong><br>
         {% for  user in event.attendees.all %}
             {{ user }} <br>
