--- a/web_event/events/templates/events/show_venue.html
+++ b/web_event/events/templates/events/show_venue.html
@@ -20,5 +20,8 @@
         </p>
     </div>
   </div>
+  <div>
+    <a href="{% url 'update-venue' venue.id %}" class="btn btn-secondary">Update</a>
+  </div>  
 
 {% endblock %}
